# Switch

./: .appveyor.yml  .cppcheck_false_positive.txt  .doxygen.txt  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GenerateAndPublishDocumentation.command  GenerateDocumentation.command  Install.md  Install.ps1  Install.txt  LICENSE  LICENSE.md  Pcf.Doxyfile  PcfConfig.cmake  PcfDependences.cmake  PcfDependencies.cmake  README.md  Switch.Doxyfile  SwitchConfig.cmake  SwitchDependencies.cmake  appveyor.yml  install.bat  install.cmd  install.command  install.sh  install_centos_clang.sh  install_centos_clang.sh~Stashed changes  install_centos_gcc.sh  install_elementary_os_clang.sh  install_linux_clang.sh  install_linux_gcc.sh  install_mac_os_x.sh  install_macosx_xcode.sh  install_mint_clang.sh  install_redhat_clang.sh  install_ubuntu_clang.sh  install_ubuntu_gcc.sh  (+2 more)
Core/: CMakeLists.txt  Change.txt
Core/Includes/Pcf/: Abstract.hpp  Allocator.hpp  Any.h  Any.hpp  As.h  As.hpp  Async.h  Async.hpp  Await.h  Await.hpp  Boxing.h  Boxing.hpp  Core  Core.h  Core.hpp  CurrentInformation.h  ExcPtr.h  ExceptionPtr.h  ExceptionPtr.hpp  FunctionPointer.h  Interface.h  Interface.hpp  Is.h  Is.hpp  LiteralOperatorConverter.h  LiteralOperatorConverter.hpp  Lock.h  Lock.hpp  Move.h  Move.hpp  NullPtr.hpp  NullType.hpp  Pcf  Pcf.h  Property.h  Property.hpp  Public.h  Ref.h  Ref.hpp  RefPtr.h  (+19 more)
Core/Includes/Switch/: Abstract.hpp  Any.hpp  As.hpp  Async.hpp  Await.hpp  Boxing.hpp  Caller.hpp  Core.hpp  CurrentInformation.hpp  Event.hpp  ExceptionPtr.hpp  Foreach.hpp  Global.hpp  Interface.hpp  Is.hpp  LiteralOperatorConverter.hpp  Lock.hpp  Move.hpp  Nameof.hpp  NullPtr.hpp  Property.hpp  Public.hpp  Ref.hpp  RefPtr.hpp  SharedPtr.hpp  Startup.hpp  Static.hpp  Types.hpp  UniquePtr.hpp  Unused.hpp  Using.hpp  Var.hpp  __opaque_function_pointer__.hpp  __opaque_lock_guard__.hpp  __opaque_unicode_string__.hpp
Core/IntegrationTests/: BinaryWriterIT.cpp  CMakeLists.txt  DictionaryIT.cpp  DirectoryIT.cpp  DnsIT.cpp  EventWaitHandleIT.cpp  FileStreamIT.cpp  InterlockedIT.cpp  ListIT.cpp  MutexIT.cpp  NetworkStreamIT.cpp  PathIT.cpp  QueueIT.cpp  SemaphoreIT.cpp  SerializationIT.cpp  SocketAddress.cpp  StreamIT.cpp  TcpClientIT.cpp  TestUtils.h  ThreadIT.cpp  ThreadSyncIT.cpp  TimerIT.cpp  UdpClientIT.cpp  isDigit.map  isPunctuation.map
Core/ManualTests/: CMakeLists.txt  Main.cpp
Core/Sources/Pcf/: ExcPtr.cpp  ExceptionPointer.cpp  ExceptionPtr.cpp
Core/Sources/Switch/: ExceptionPtr.cpp  Hash.cpp  __opaque_unicode_string__.cpp
Core/Sources/__OS/: ConsoleGcc.cpp  ConsoleW32.cpp  CoreApi.h  CoreApi.hpp  DateTimeGcc.cpp  DateTimeW32.cpp  DebuggerGcc.cpp  DebuggerW32.cpp  DirectoryGcc.cpp  DirectoryW32.cpp  Dns.cpp  DriveGcc.cpp  DriveW32.cpp  EnvironmentGcc.cpp  EnvironmentW32.cpp  Format.cpp  InterlockedGcc.cpp  InterlockedW32.cpp  ProcessGcc.cpp  ProcessW32.cpp  RegistryGcc.cpp  RegistryW32.cpp  Security.cpp  SocketGcc.cpp  SocketW32.cpp  ThreadGcc.cpp  ThreadW32.cpp  TypeGcc.cpp  TypeW32.cpp  UnicodeCharacters.cpp  UnicodeEncodings.cpp  isAlphaLatin1.map  isPunctuation.map  toUpper.map
Core/UnitTests/: CMakeLists.txt
Core/UnitTests/Pcf/: AbstractTest.cpp  AnyTest.cpp  AsTest.cpp  AsyncTest.cpp  AwaitTest.cpp  Cpp11Test.cpp  CurrentInformationTest.cpp  ExceptionPointerTest.cpp  ForEachTest.cpp  FunctionPointerTest.cpp  InitializerListTest.cpp  InterfaceTest.cpp  IsTest.cpp  (+12 more)
Drawing/: CMakeLists.txt
Drawing/UnitTests/: CMakeLists.txt  ColorTest.cpp  PointTest.cpp  RectangleTest.cpp  SizeTest.cpp  SystemColorsTest.cpp
Examples/: CMakeLists.txt  README.md
Examples/Core/: CMakeLists.txt
Examples/Drawing/: CMakeLists.txt
Examples/Forms/: CMakeLists.txt
Examples/TUnit/: CMakeLists.txt
Examples/__Old/: SharedPointer.cpp  SignalHandler.cpp  SpecializedEventHandler.cpp  String.cpp  SystemInformation.cpp  UniquePointer.cpp
Forms/: CMakeLists.txt
Forms/ManualTests/: CMakeLists.txt  Main.cpp
Forms/UnitTests/: ApplicationTest.cpp  CMakeLists.txt  ControlTest.cpp
Libraries/Pcf/: CMakeCache.txt  CMakeLists.txt  Dependences.cmake  Pcf.Doxyfile  PcfConfig.cmake
Pcf/: CMakeLists.txt
Switch/System/: CMakeLists.txt
TUnit/: CMakeLists.txt
TUnit.Main/: CMakeLists.txt
TUnit.Main/Sources/: Main.cpp
TUnit/ManualTests/: Main.cpp
TUnit/UnitTests/: AssertTest.cpp  CMakeLists.txt  ExpectTest.cpp
ThirdParties/: CMakeLists.txt
ThirdParties/Fl_DragBar/: Fl_DragBar.H  Fl_DragBar.cxx  Fl_DragBar.fld  Makefile  demoDragBar.cxx  demoDragBar.fld  demoDragBar.h
ThirdParties/Fl_Gel_Tabs/: CHANGES  CMakeLists.txt  COPYING  CREDITS  Fl_Gel_Tabs.cpp  Fl_Gel_TabsConfig.cmake  Makefile  Makefile.MICROSOFT  README  TODO  geltabs-simple-example.cxx  geltabs-test-value.cxx  geltabs-test.cxx  make.bat
ThirdParties/Fltk Window transparent/: FL_Shaped_Window (Bad).h  FL_WindowTransparency.h  FL_WindowTransparency_Cocoa.cpp  FL_WindowTransparency_Win32.cpp  FL_WindowTransparency_X11.cpp  c++ - How can I make a window transparent in Windows, Mac OS X, .webloc  fltk transparent window - Recherche Google.webloc  my-cocoa-wrappers.h  my-cocoa-wrappers.mm
ThirdParties/Rs232/: CMakeLists.txt
ThirdParties/call_stack/: CMakeLists.txt  call_stackConfig.cmake
ThirdParties/easywsclient/: CMakeLists.txt  Dependences.cmake
ThirdParties/fltk/: CMakeLists.txt  configh.cmake.in  configh.in  configure.ac  fltkConfig.cmake
ThirdParties/gel_button/: CMakeLists.txt  Dependences.cmake  Makefile  button_test.cxx  button_test_with_tabs.cxx  gel_button.cpp  gel_button.h  gel_buttonConfig.cmake
ThirdParties/googletest/: CMakeLists.txt
ThirdParties/gtest/: CMakeLists.txt  gtestConfig.cmake
ThirdParties/icu/: CMakeLists.txt  icuConfig.cmake
ThirdParties/jpeg/: CMakeLists.txt  jpegConfig.cmake
ThirdParties/jpeglib/: CMakeLists.txt  install.txt
ThirdParties/libcurl/: CMakeLists.txt  libcurlConfig.cmake
ThirdParties/libpng/: CMakeLists.txt  Dependences.cmake  libpngConfig.cmake  pngstruct.h
ThirdParties/zlib/: CMakeLists.txt  zlibConfig.cmake
examples/: CMakeLists.txt  README.md
(+50071 files in other folders)
